# simbench

./: '  .gitignore  README.md  experiments.py  flake.nix  main.py  pyproject.toml  pytest.ini  test.ipynb
decompile_test/: Main.java
leanproofs/: Leanproofs.lean  lake-manifest.json  lakefile.toml
leanproofs/Leanproofs/: Basic.lean
predata/: predata_file_overview.parquet
predata/analyses/: NCD-gzip_clvl_1-BestMatch-classifications.parquet  NCD-gzip_clvl_1-BestMatch-performance_overview.parquet  NCD-gzip_clvl_1-knn_10-classifications.parquet  NCD-gzip_clvl_1-knn_10-performance_overview.parquet  NCD-gzip_clvl_9-BestMatch-classifications.parquet  NCD-gzip_clvl_9-BestMatch-performance_overview.parquet  NCD-zstandard_clvl_1-BestMatch-classifications.parquet  NCD-zstandard_clvl_1-BestMatch-performance_overview.parquet  NCD-zstd_clvl_1-BestMatch-classifications.parquet  NCD-zstd_clvl_1-BestMatch-performance_overview.parquet  NCD-zstd_clvl_1-knn_10-classifications.parquet  NCD-zstd_clvl_1-knn_10-performance_overview.parquet  NCD-zstd_clvl_10-BestMatch-classifications.parquet  NCD-zstd_clvl_10-BestMatch-performance_overview.parquet  NCD-zstd_clvl_19-BestMatch-classifications.parquet  NCD-zstd_clvl_19-BestMatch-performance_overview.parquet  NCD_zstd_1-BestMatch-classifications.parquet  NCD_zstd_1-BestMatch-performance_overview.parquet  NCD_zstd_1-bm-classifications.parquet  NCD_zstd_1-bm-performance_overview.parquet  NCD_zstd_1-compressions.parquet  merged_performance_overview.parquet  zstd_1-compressions.parquet
predata/p00001/: s005618736.java  s007352793.java  s007595410.java  s008485993.java  s013394985.java  s019664281.java  s020250589.java  s021426571.java  s021679252.java  s023804818.java  s024366832.java  s025295185.java  s027457459.java  s027754483.java  s040574958.java  s047843521.java  s055009395.java  s060823549.java  s067340947.java  s067653218.java  s070041757.java  s070866413.java  s073151161.java  s077886802.java  s078717962.java  s085791791.java  s085811410.java  s086863968.java  s087599187.java  s088726312.java  s094323882.java  s100203211.java  s101703868.java  s107263736.java  s112056049.java  s115737698.java  s118127379.java  s119647658.java  s123855620.java  s124417688.java  (+257 more)
predata/p00002/: s003798551.java  s009541168.java  s009921911.java  s010008352.java  s012323679.java  s014282523.java  s014588445.java  s015526582.java  s018160121.java  s018184549.java  s019060872.java  s021798406.java  s023816831.java  s032608090.java  s035966220.java  s043976484.java  s045444133.java  s047319042.java  s051867640.java  s052141314.java  s053400710.java  s057235968.java  s060503144.java  s061945661.java  s067862496.java  s070432328.java  s071565953.java  s081276312.java  s088143743.java  s093968382.java  s103891722.java  s107512622.java  s110716960.java  s116969949.java  s124493739.java  s126451544.java  s136711388.java  s143196543.java  s148603582.java  (+260 more)
rust_src/: Cargo.toml  pyproject.toml
rust_src/simbenchers_core/: Cargo.toml  s001421950_decompiled.java
rust_src/simbenchers_core/src/: lib.rs  normalizers.rs  plot_data.rs  tables.rs
rust_src/src/: lib.rs  tables.rs
rust_src/tests/: Main.java
rust_src/tests/jarout_test/jarout_decompiled/: Main.java
rust_src/tests/jartest/: proguardout
simbench/: AI_tools.py  analysis.py  build.py  classification.py  cli.py  codeBERT.py  comparing.py  compressors.py  data.py  differs.py  evaluation.py  main.py  metrics.py  normalizers.py  plots.py  similarity.py  similarity_measures.py  simple_normalizer.py  statistics.py  tables.py
src/: classification.py  cli.py  data.py  similarity.py
test/: conftest.py  test_ai_tools.py  test_build.py  test_classification.py  test_cli.py  test_file_overview.parquet  test_similarity.py
tests/: test_similarity.py
tmp/: Main.java
(+18419 files in other folders)
