
[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
include = ["simbench"]  

[project]
name = "simbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = "BSD-3-Clause"
dependencies = [
    "bsdiff4>=1.2.6",
    "click>=8.3.0",
    "code2vec",
    "graphcode2vec",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "patchelf>=0.17.2.4",
    "plotly>=6.5.0",
    "polars>=1.35.1",
    "py-indicatif>=0.1.0",
    "pyarrow>=22.0.0",
    "pytest-profiling>=1.8.1",
    "pytest-xdist>=3.8.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "statsmodels>=0.14.5",
    "tensorflow>=2.21.0",
    "termcolor>=3.3.0",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "zstandard>=0.25.0",
    "zstd>=1.5.7.2",
]
authors = [
  { name = "Oskar Hovmøller Dinesen", email = "ohodi@dtu.dk" },
  { name = "Christian Gram Kalhauge", email = "chrg@dtu.dk" }
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.scripts]
simbench = "simbench.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
  "slow: mark test as slow"
]

[tool.maturin]
module-name = "rust_src"

[tool.uv.workspace]
members = [
    "processing_tools/graphcode2vec",
    "processing_tools/code2vec",
]

[tool.uv.sources]
graphcode2vec = { workspace = true }
code2vec = { workspace = true }

