[workspace]
members = ["simbenchers_core"]

[package]
name = "rust_src"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_src"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
camino = "1.2.2"
color-eyre = "0.6.5"
duct = "1.1.1"
flate2 = "1.1.8"
indicatif = { version = "0.18.3", features = ["rayon"] }
itertools = "0.14.0"
polars = "0.52.0"
pyo3 = "^0.26.0" 
pyo3-polars = "0.25.0"
rayon = "1.11.0"
zstd-safe = "7.2.4"
